@startuml
class Program {
    {static} Main(args:string[]) : void
}
class CliWrapController {
    - <<readonly>> _cliWrapInputPort : ICliWrapInputPort
    + CliWrapController(cliWrapInputPort:ICliWrapInputPort)
    + GetInputData(url:string, mainFolder:string, configFileName:string) : void
}
class CliWrapPresenter {
    + ExcuteSite(url:string, path:string) : void
}
ICliWrapOutputPort <|-- CliWrapPresenter
class CliWrapInteractor {
    - <<readonly>> _cliWrapOutputPort : ICliWrapOutputPort
    - <<readonly>> _path : string
    - _config : Config
    - _url : string
    + CliWrapInteractor(cliWrapOutput:ICliWrapOutputPort)
    + InputPath(url:string, mainFolder:string, configFileName:string) : void
    + Handle() : void
    - GetChromePath() : string
    - ReadConfigurationFromHoconFile(assembly:Assembly, configDirectoryName:string, configAppFileName:string) : Akka.Configuration.Config
}
ICliWrapInputPort <|-- CliWrapInteractor
interface ICliWrapInputPort {
    + InputPath(url:string, mainFolder:string, configFileName:string) : void
}
interface ICliWrapOutputPort {
    + ExcuteSite(url:string, path:string) : void
}
@enduml
